...
                    fontWeight: FontWeight.w600,
                    fontSize: size32(context),
                  ),
                ),
                actions: <Widget>[
                  TextButton.icon(
                      key: const Key('signInButton'),
                      onPressed: () {
                        widget.toggleView();
                      },
                      icon: Icon(
                        Icons.person,
                        color: backgroundColor,
...
                                  child: Column(
                                      mainAxisSize: MainAxisSize.max,
                                      crossAxisAlignment:
                                          CrossAxisAlignment.start,
                                      children: [
                                        Text(
                                          key: const Key('createAccountText'),
                                          'Create an account',
                                          textAlign: TextAlign.start,
                                          style: TextStyle(
                                            fontFamily: 'Plus Jakarta Sans',
                                            color: const Color(0xFF101213),
                                            fontSize: size32(context),
...
                                        Padding(
                                          padding: const EdgeInsetsDirectional
                                              .fromSTEB(0, 0, 0, 16),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                                key: const Key('emailField'),
                                                decoration: InputDecoration(
                                                  labelText: 'Email',
                                                  labelStyle: TextStyle(
                                                    fontFamily:
                                                        'Plus Jakarta Sans',
                                                    color:
...
                                        Padding(
                                          padding: const EdgeInsetsDirectional
                                              .fromSTEB(0, 0, 0, 16),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                                key: const Key('pwdField'),
                                                autofillHints: const [
                                                  AutofillHints.password
                                                ],
                                                obscureText:
                                                    !_model.passwordVisibility,
                                                decoration: InputDecoration(
...
                                          padding: const EdgeInsetsDirectional
                                              .fromSTEB(0, 0, 0, 16),
                                          child: SizedBox(
                                            width: double.infinity,
                                            child: TextFormField(
                                                key: const Key(
                                                    'confirmPwdField'),
                                                autofocus: true,
                                                autofillHints: const [
                                                  AutofillHints.password
                                                ],
                                                obscureText: !_model
                                                    .confirmPasswordVisibility,
...
                                              const AlignmentDirectional(0, 0),
                                          child: Padding(
                                            padding: const EdgeInsetsDirectional
                                                .fromSTEB(0, 0, 0, 16),
                                            child: ElevatedButton(
                                              key:
                                                  const Key('getStartedButton'),
                                              onPressed: () async {
                                                if (password !=
                                                    confirmPassword) {
                                                  ScaffoldMessenger.of(context)
                                                      .showSnackBar(
                                                    const SnackBar(
...
          );
  }

  register(String email, String password) async {
    Navigator.push(
      context,
      MaterialPageRoute(builder: (context) => Homepage(key: Key('home'))),
    );
  }
}

