...
  @override
  Widget build(BuildContext context) {
    final user = Utente(uid: 'testUser');

    return Scaffold(
      backgroundColor: backgroundColor,
      body: _widgetOptions.elementAt(_selectedIndex),
      bottomNavigationBar: BottomNavigationBar(
        backgroundColor: mainColor,
        selectedItemColor: backgroundColor,
        iconSize: !tablet
            ? MediaQuery.sizeOf(context).height * 0.03
            : MediaQuery.sizeOf(context).height * 0.032,
        items: const <BottomNavigationBarItem>[
          BottomNavigationBarItem(
            icon: Icon(key: Key('search'), Icons.search),
            label: 'Search',
          ),
          BottomNavigationBarItem(
            icon: Icon(key: Key('profile'), Icons.person),
            label: 'Profile',
          ),
          BottomNavigationBarItem(
            icon: Icon(key: Key('chat'), Icons.chat),
            label: 'Chat',
          ),
        ],
        currentIndex: _selectedIndex,
        onTap: _onItemTapped,
      ),
...
    return Scaffold(
        key: _scaffoldKey,
        appBar: AppBar(
          backgroundColor: mainColor,
          actions: <Widget>[
            IconButton(
              key: Key('settings'),
              icon: Icon(Icons.settings, color: backgroundColor),
              onPressed: () async {
                if (!tablet) {
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                      builder: (context) => const FormFilterPeopleAdj(
                          key: Key('formfilterpeople')),
                    ),
                  );
                } else {
                  setState(() {
                    choice.value = 1;
                  });
                  _scaffoldKey.currentState?.openEndDrawer();
                }
              },
            ),
            Align(
                child: badges.Badge(
              key: Key('notifiesBadge'),
              showBadge: (myNotifies != null && myNotifies != 0),
              badgeContent: Text(
                myNotifies?.toString() ?? "",
                style: GoogleFonts.plusJakartaSans(color: backgroundColor),
              ),
              position: badges.BadgePosition.topEnd(top: 10, end: 10),
              badgeStyle: badges.BadgeStyle(
                  padding: const EdgeInsets.all(4), badgeColor: errorColor),
              child: IconButton(
                key: Key('notifiesIcon'),
                icon: Icon(
                  Icons.notifications,
                  size: !tablet
                      ? MediaQuery.sizeOf(context).height * 0.03
                      : MediaQuery.sizeOf(context).height * 0.032,
                ),
...
                  if (mounted) {
                    if (!tablet) {
                      Navigator.push(
                        context,
                        MaterialPageRoute(
                          builder: (context) => NotificationPersonLayout(
                              key: Key('notificationPage')),
                        ),
                      );
                    } else {
                      setState(() {
                        choice.value = 2;
                      });
...
              ),
              Align(
                alignment: const AlignmentDirectional(0, 0),
                child: Padding(
                  padding: const EdgeInsetsDirectional.fromSTEB(0, 0, 0, 16),
                  child: ElevatedButton(
                    key: Key('modifyButton'),
                    onPressed: () {
                      Navigator.push(
                        context,
                        MaterialPageRoute(
                            builder: (context) => ModificaPersonalProfile(
                                  key: Key('modifyProfile'),
                                  personalProfile: personalData,
                                )),
                      );
                    },
                    style: ElevatedButton.styleFrom(
                      fixedSize: const Size(230, 52),
...
    BuildContext context, Chat chat, Utente user, bool tablet) {
  final image = Icon(Icons.abc);
  final type = "Apartment";
  final city = "Milan";
  final idHouse = "houseTest";
  return InkWell(
    key: Key('chatsInkWell'),
    splashColor: Colors.transparent,
    focusColor: Colors.transparent,
    hoverColor: Colors.transparent,
    highlightColor: Colors.transparent,
    onTap: () async {
      /*if (mounted)*/ {
        if (!tablet) {
          Navigator.push(
            context,
            MaterialPageRoute(
              builder: (context) => ChatPage(
                key: Key('chatPage'),
                senderUserID: user.uid,
                nameReciver: "$type $city",
                receiverUserID: idHouse,
              ),
            ),
          );
...
            offset: Offset(0, 2),
          )
        ],
        borderRadius: BorderRadius.circular(8),
      ),
      child: InkWell(
        key: Key('matchesInkWell'),
        splashColor: Colors.transparent,
        focusColor: Colors.transparent,
        hoverColor: Colors.transparent,
        highlightColor: Colors.transparent,
        onTap: () {
          if (!tablet) {
            Navigator.push(
              context,
              MaterialPageRoute(
                builder: (context) => ChatPage(
                  key: Key('matchChatPage'),
                  senderUserID: user.uid,
                  nameReciver: "$type $city",
                  receiverUserID: idHouse,
                ),
              ),
            );
...
